--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2> 
                                            
-            <p>Localizada no coração da cidade a <strong>Ba
+            <p>Localizada no coração da cidade a <strong>
                 <li>Home</li>
                 <li>Produtos</li>
                 <li>Contato</li>
