--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="produtos.css">
+        
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="produtos.css>
     </head>
-    
     <body>
         <header>
-            <h1 class="titulo-principal">Barbearia Alura</h1>
+            <div class="caixa">
+                <h1><img src="logo.png"><              
         </header>  
         <img id="banner" src="banner.jpg>
         <div class="principal">
