--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                               
                               <nav>
                                    <ul>
-                                      <li><a href="index.html">Home/a></li> 
+                                      <li><a href="index.html">Home</a></li> 
                                       <li><a href="produtos.html">Produtos</a><li>
-                                      <li><a href="contatos.html">Contatos</a>/li> 
+                                      <li><a href="contatos.html">Contatos</a></li> 
                                                                  </ul>
                                                                  </nav>
                                                                  </div>
