--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="caixa">
-                              <h1><img src="logo.png"></h1>
+                              <h1><img src="imagens (4).zip"></h1>
                               
                               <nav>
                                    <ul>
